src/objects/Bank_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bank_acct_nbr__c</fullName>
        <label>bank_acct_nbr</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tran_date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>tran_date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tran_type__c</fullName>
        <label>tran_type</label>
        <picklist>
            <picklistValues>
                <fullName>WithDraw</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bank_Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank_Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank_Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>